--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dz-jobs",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://dz-jobs-api-production.up.railway.app",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "locomotive-scroll": "^4.1.4",
@@ -19,7 +22,7 @@
     "swiper": "^11.1.15"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
