--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "lucide-react": "^0.469.0",
     "next": "15.0.3",
     "nookies": "^2.5.2",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.6.0",
